[gd_scene load_steps=4 format=3 uid="uid://cf011ecvi2pr7"]

[ext_resource type="Script" path="res://core/ui/config/track_picker.gd" id="1_wyeq0"]
[ext_resource type="Script" path="res://core/ui/common/syncable_option_button.gd" id="2_vo8gj"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_lrg3q"]
properties/0/path = NodePath("HBoxContainer/TrackSelection:selected_uuid")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath("ConfigurePanel/VBoxContainer/NightButton:button_pressed")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath("ConfigurePanel/VBoxContainer/WeatherButton:button_pressed")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath("ConfigurePanel/VBoxContainer/MirrorButton:button_pressed")
properties/3/spawn = true
properties/3/replication_mode = 2

[node name="TrackPicker" type="VBoxContainer"]
offset_right = 158.0
offset_bottom = 58.0
script = ExtResource("1_wyeq0")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Selected track"

[node name="TrackSelection" type="OptionButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("2_vo8gj")

[node name="ConfigureButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Configure..."

[node name="ConfigurePanel" type="PopupPanel" parent="."]
title = "Track configuration"
initial_position = 4
size = Vector2i(125, 109)
borderless = false

[node name="VBoxContainer" type="VBoxContainer" parent="ConfigurePanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 121.0
offset_bottom = 105.0

[node name="NightButton" type="CheckButton" parent="ConfigurePanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Night"

[node name="WeatherButton" type="CheckButton" parent="ConfigurePanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Weather"

[node name="MirrorButton" type="CheckButton" parent="ConfigurePanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Mirrored"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_lrg3q")

[connection signal="syncable_item_selected" from="HBoxContainer/TrackSelection" to="." method="_on_track_selection_syncable_item_selected"]
[connection signal="pressed" from="ConfigureButton" to="." method="_on_configure_button_pressed"]
[connection signal="toggled" from="ConfigurePanel/VBoxContainer/NightButton" to="." method="_on_night_button_toggled"]
[connection signal="toggled" from="ConfigurePanel/VBoxContainer/WeatherButton" to="." method="_on_weather_button_toggled"]
[connection signal="toggled" from="ConfigurePanel/VBoxContainer/MirrorButton" to="." method="_on_mirror_button_toggled"]
